# chat-db

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  alembic.ini  config.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2855855924af_create_data_sources_table.py  8786cdcd3fa3_add_learning_fields_and_learning_logs_.py  a1c7e9f40b2d_add_metadata_inferred_fks_table.py  b2d3e4f5a6c7_add_value_mapping_tables.py  c3d4e5f6a7b8_add_profile_and_summary_tables.py  cdb85a01f46b_create_metadata_tables.py
docs/: development-plan.md  ui-interaction-design.md  自然语言数据库查询需求设计.md
docs/agent-harness/: architecture-map.md  coding-rules.md  commands.md  harness-debt.md  index.md  known-failures.md  review-rubric.md  verification.md
frontend/: chat.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useQuerySSE.ts
frontend/lib/: api.ts
frontend/stores/: admin.ts  chat.ts  datasources.ts  toast.ts
src/agents/: graph.py  plan_generator.py  state.py
src/api/: admin.py  datasources.py  gateway.py  main.py  schemas.py
src/config/: data_source_model.py  database.py  encryption.py  models.py  settings.py
src/db/: connection.py
src/healing/: classifier.py  cross_table.py  learning.py  sql_rewrite.py
src/knowledge/: embedding.py  graph_query.py  graph_store.py  lifecycle.py  vector_store.py
src/learning/: fk_inference.py  l2_inference.py  orchestrator.py  pattern_detector.py  splitter.py  word_table.py
team-spec/: CONTEXT.md
test/: conftest.py
(+228 files in other folders)
